# 2020-BSE-139-PS

./: README.md
python/: videoslim_example.py
src/: CMakeLists.txt  videoslim.cpp  videoslim.h  videoslim_internal.cpp  videoslim_internal.h
test/: test_videoslim.cpp
